# uniproc

./: .gitignore  AGENTS.md  Cargo.toml  icons.gui.toml  icons.toml  icons.vendor.gui.toml  trace-scopes.toml
crates/app-contracts/: Cargo.toml  build.rs
crates/app-contracts/src/: lib.rs
crates/app-contracts/src/features/agents/: model.rs
crates/app-contracts/src/features/cosmetics/: ports.rs
crates/app-contracts/src/features/environments/: bindings.rs  model.rs  ports.rs
crates/app-contracts/src/features/l10n/: model.rs  ports.rs
crates/app-contracts/src/features/navigation/: bindings.rs  model.rs  ports.rs
crates/app-contracts/src/features/processes/: bindings.rs  ports.rs
crates/app-contracts/src/features/services/: bindings.rs  mod.rs  model.rs  ports.rs
crates/app-contracts/src/features/sidebar/: bindings.rs  model.rs  ports.rs
crates/app-contracts/src/features/tabs/: bindings.rs  model.rs  ports.rs
crates/app-contracts/src/features/window_actions/: bindings.rs  model.rs  ports.rs
crates/app-contracts/src/features/windows_manager/: model.rs
crates/build-utils/: Cargo.toml
crates/build-utils/src/: collector.rs  icons.rs  lib.rs  slint_parser.rs  trace_scopes.rs
crates/context/: Cargo.toml  build.rs
crates/context/src/: icons.rs  page_status.rs  trace.rs
crates/context/src/caches/icons/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lifecycle_tracker.rs  shared_state.rs  signal.rs  trace.rs
crates/core/src/actor/: addr.rs  ctx.rs  envelope.rs  mod.rs  traits.rs
crates/core/src/actor/event_bus/: builder.rs  mod.rs  subscribe.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: bootstrap.rs
crates/domain/: Cargo.toml  build.rs
crates/domain-test-kit/: Cargo.toml  build.rs
crates/domain-test-kit/src/: generated.rs  lib.rs  utils.rs
crates/domain-test-kit/src/test_env/: cosmetics.rs  environments.rs  mod.rs  navigation.rs  processes.rs  services.rs  sidebar.rs  tabs.rs  window_actions.rs
crates/domain-test-kit/tests/: cosmetics_test.rs  environments_test.rs  navigation_test.rs  processes_test.rs  services_test.rs  sidebar_test.rs  tabs_test.rs  window_actions_test.rs
crates/domain/src/: lib.rs
crates/domain/src/features/: mod.rs
crates/domain/src/features/agents/: Cargo.toml  actor.rs  backend.rs  connection.rs  mod.rs  settings.rs
crates/domain/src/features/agents/providers/: linux.rs  windows.rs  wsl.rs
crates/domain/src/features/cosmetics/: mod.rs
crates/domain/src/features/environments/: Cargo.toml  mod.rs  registry.rs  settings.rs
crates/domain/src/features/environments/discovery/: host.rs  mod.rs  wsl.rs
crates/domain/src/features/environments/wsl/: actor.rs  mod.rs
crates/domain/src/features/l10n/: mod.rs
crates/domain/src/features/navigation/: Cargo.toml  actor.rs  mod.rs  model.rs  settings.rs  state.rs
crates/domain/src/features/page_status/: mod.rs
crates/domain/src/features/processes/: Cargo.toml  mod.rs  settings.rs
crates/domain/src/features/processes/application/: actor.rs  process_snapshot_actor.rs
crates/domain/src/features/processes/domain/: table.rs
crates/domain/src/features/services/: mod.rs  settings.rs
crates/domain/src/features/services/application/: actor.rs  snapshot_actor.rs
crates/domain/src/features/services/view/: mod.rs
crates/domain/src/features/settings/: mod.rs  settings.rs
crates/domain/src/features/sidebar/: actor.rs  mod.rs  settings.rs
crates/domain/src/features/tabs/: actor.rs  mod.rs  model.rs  state.rs
crates/domain/src/features/test_discovery/: mod.rs
crates/domain/src/features/trace_settings/: mod.rs  settings.rs
crates/domain/src/features/window_actions/: actor.rs  mod.rs
crates/domain/src/features/windows_manager/: actor.rs  mod.rs
crates/forsl-trace/: Cargo.toml
crates/forsl-trace/src/: lib.rs  policy.rs  subscriber.rs
crates/framework/: Cargo.toml  build.rs
crates/framework/src/: addr.rs  app.rs  icons.rs  into_signal.rs  lib.rs  lifecycle_tracker.rs  reactor.rs  settings.rs  trace.rs
crates/framework/src/feature/: context_ext.rs  mod.rs  traits.rs
crates/framework/src/native_windows/: slint_factory.rs
crates/macros/: Cargo.toml
crates/macros/src/: actor_manifest.rs  binder_gen.rs  features.rs  handler.rs  lib.rs  slint_macros.rs  window_feature.rs
crates/slint-adapter/: Cargo.toml  build.rs
crates/slint-adapter/src/features/: l10n.rs
crates/slint-adapter/src/features/cosmetics/: port.rs
crates/slint-adapter/src/features/environments/: bindings.rs  port.rs
crates/slint-adapter/src/features/navigation/: bindings.rs
crates/slint-adapter/src/features/processes/: bindings.rs  port.rs
crates/slint-adapter/src/features/services/: bindings.rs  mod.rs  port.rs
crates/slint-adapter/src/features/sidebar/: bindings.rs  port.rs
crates/slint-adapter/src/features/tabs/: bindings.rs  port.rs
crates/slint-adapter/src/features/window_actions/: bindings.rs  port.rs
crates/slint-adapter/ui/: app-window.slint  globals-export.slint
crates/slint-adapter/ui/builtin/: dashboard.slint
crates/slint-adapter/ui/components/: combobox.slint  context-menu.slint  loader-area.slint
crates/slint-adapter/ui/components/button/: index.slint
crates/slint-adapter/ui/components/table/: header-cell.slint  index.slint  row-master-cell.slint  row-tree.slint  row.slint  sort-arrow.slint
crates/slint-adapter/ui/features/environments/: bindings.slint  globals.slint
crates/slint-adapter/ui/features/navigation/: bindings.slint
crates/slint-adapter/ui/features/processes/: bindings.slint  globals.slint  process-view.slint  run-task-dialog.slint
crates/slint-adapter/ui/features/services/: bindings.slint  globals.slint  service-properties-dialog.slint  service-view.slint
crates/slint-adapter/ui/features/sidebar/: bindings.slint  globals.slint  index.slint
crates/slint-adapter/ui/features/tabs/: bindings.slint  globals.slint  index.slint
crates/slint-adapter/ui/features/window_actions/: bindings.slint
crates/slint-adapter/ui/title/: controls.slint  title-bar.slint
crates/widgets/: Cargo.toml
(+8 files in other folders)
