cargo-features = ["codegen-backend"]
[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
default-members = ["crates/desktop"]
members = [
    "crates/context",
    "crates/domain",
    "crates/domain-test-kit",
    "crates/domain/src/features/agents",
    "crates/domain/src/features/environments",
    "crates/domain/src/features/navigation",
    "crates/domain/src/features/processes",
    "crates/app-contracts",
    "crates/slint-adapter",
    "crates/widgets",
    "crates/macros",
    "crates/desktop",
]

[workspace.dependencies]
# --- Internal Crates ---
app-contracts = { path = "crates/app-contracts" }
context = { path = "crates/context" }
domain = { path = "crates/domain" }
domain-test-kit = { path = "crates/domain-test-kit" }
domain-agents = { path = "crates/domain/src/features/agents" }
domain-environments = { path = "crates/domain/src/features/environments" }
domain-navigation = { path = "crates/domain/src/features/navigation" }
domain-processes = { path = "crates/domain/src/features/processes" }
guicons = { version = "0.1.0", features = ["slint"] }
guicons-build = "0.1.3"
guicons-core = "0.1.0"
macros = { path = "crates/macros" }
slint-adapter = { path = "crates/slint-adapter" }
widgets = { path = "crates/widgets" }

# --- forsl (split into its own repo, path dep to a sibling checkout) ---
forsl-trace = { path = "../forsl/crates/forsl-trace" }
forsl-codegen = { path = "../forsl/crates/forsl-codegen" }
forsl-core = { path = "../forsl/crates/forsl-core" }
forsl-macros = { path = "../forsl/crates/forsl-macros" }
forsl = { path = "../forsl/crates/forsl" }
forsl-test-kit = { path = "../forsl/crates/forsl-test-kit" }
inventory = "0.3"

# --- Custom & Git Dependencies ---
ogurpchik = { git = "https://github.com/Tam1SH/oguRPChik", branch = "master", features = ["rkyv-codec", "vsock", "uds"] }
uniproc-protocol = { git = "https://github.com/Tam1SH/uniproc-protocol", branch = "master" }


# --- UI Stack (Slint & Windowing) ---
slint = { version = "=1.17.1", features = ["renderer-skia"] }
slint-build = "=1.17.1"
i-slint-backend-winit = "=1.17.1"
i-slint-compiler = "=1.17.1"
i-slint-core = "=1.17.1"
i-slint-backend-testing = "=1.17.1"
winit = "0.30.12"
window-vibrancy = "0.7.1"
raw-window-handle = "0.6.2"

# --- Async & Networking ---
tokio = { version = "1.49.0", features = ["full"] }
compio = { version = "0.18.0", features = ["net", "io-compat", "process", "macros", "time"] }
futures = "0.3.31"
async-trait = "0.1.89"
flume = { version = "0.12.0", features = ["async"] }
bytes = "1.11.1"
socket2 = "0.6.2"

# --- Serialization & Data ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
rkyv = { version = "0.8.14", features = ["bytecheck", "std"] }
uuid = { version = "1.23.0", features = ["v4"] }
amethystate = "0.9.2"

# --- Logging & Diagnostics ---
tracing = { version = "0.1.44", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.3"
dhat = "0.3"

# --- System & Platform ---
windows = { version = "0.61.3", features = [
    "Win32_UI_Controls", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging", "Win32_System_Com",
    "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_Performance",
    "Win32_NetworkManagement", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock", "Win32_System_Threading", "UI",
    "UI_ViewManagement", "Win32_System_Hypervisor", "Management", "Management_Deployment",
    "ApplicationModel", "ApplicationModel_Core", "Win32_Storage_Packaging", "Win32_Storage_Packaging_Appx", "Win32_System_Services",
] }
libc = "1.0.0-alpha.2"
sysinfo = "0.38.0"

# --- Proc-Macro & Code Generation ---
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# --- Utilities ---
anyhow = "1.0.100"
arc-swap = "1.7.1"
bon = "3.9.1"
cfg-if = "1"
dashmap = { version = "6.1.0", features = ["serde"] }
fxhash = "0.2.1"
fluent-templates = "0.14.0"
fluent-syntax = "0.12.0"
unic-langid = "0.9.6"
rust-i18n = "3"
lazy_static = "1.5.0"
smallvec = "1.15.1"
static_assertions = "1.1.0"
ttl_cache = "0.5"
walkdir = "2.5.0"
derive_more = "2.1.1"
smol_str = "0.3.6"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

# --- Profiles ---
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
split-debuginfo = "packed"

[profile.dev]
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = 0

# app-contracts' #[port]/#[bindings] macros emit `inventory::submit!`
# registrations scattered across many small files; with the default 256
# codegen units the linker can drop object files nobody else references
# (e.g. slint-adapter/domain-test-kit's build scripts only ever call
# forsl_core::contracts::*, never app_contracts directly) - single-CGU
# ensures the one anchor reference those build scripts make pulls in the
# whole compiled crate, ctors included.
[profile.dev.package.app-contracts]
codegen-units = 1
