[package]
name = "app-contracts"
version.workspace = true
edition.workspace = true

[dependencies]
forsl-core.workspace = true
forsl-macros.workspace = true
cfg-if.workspace = true
inventory.workspace = true
ogurpchik.workspace = true
rkyv.workspace = true
serde.workspace = true
slint.workspace = true
uniproc-protocol.workspace = true
uuid.workspace = true

[build-dependencies]
forsl-codegen.workspace = true
