[package]
name = "context"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
app-core.workspace = true
bon.workspace = true
i-slint-backend-winit.workspace = true
macros.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
slint.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ttl_cache.workspace = true
framework.workspace = true

raw-window-handle.workspace = true
[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy.workspace = true
windows.workspace = true

[dev-dependencies]
uuid.workspace = true

[build-dependencies]
build-utils.workspace = true
