[package]
name = "app-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
forsl-trace.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
amethystate.workspace = true
once_cell = "1.21.3"
parking_lot = "0.12.5"

[features]
test-utils = []



