[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
app-core.workspace = true
context.workspace = true
dhat.workspace = true
domain.workspace = true
domain-agents.workspace = true
domain-environments.workspace = true
domain-navigation.workspace = true
domain-processes.workspace = true
slint.workspace = true
slint-adapter.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
framework.workspace = true

[build-dependencies]
build-utils.workspace = true
context.workspace = true


