[package]
name = "domain-test-kit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
app-contracts.workspace = true
forsl-core = { workspace = true, features = ["test-utils"] }
context.workspace = true
domain = { workspace = true, features = ["test-utils"] }
domain-environments.workspace = true
domain-navigation = { workspace = true, features = ["test-utils"] }
domain-processes.workspace = true
macros.workspace = true
i-slint-core.workspace = true
slint.workspace = true
tokio.workspace = true
tracing.workspace = true
forsl.workspace = true
forsl-test-kit.workspace = true
rstest = "0.26.1"
serial_test = "3.4.0"

[dev-dependencies]
amethystate.workspace = true

[build-dependencies]
app-contracts.workspace = true
forsl-codegen.workspace = true
forsl-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
