[package]
name = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
app-contracts.workspace = true
app-core.workspace = true
context.workspace = true
dashmap.workspace = true
macros.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
slint.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
uniproc-protocol.workspace = true
uuid.workspace = true
widgets.workspace = true
framework.workspace = true
amethystate.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[build-dependencies]
toml.workspace = true

[features]
test-utils = ["app-core/test-utils"]
