[package]
name = "forsl-trace"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
once_cell = "1.21.3"
parking_lot = "0.12.5"
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
