[package]
name = "macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
app-contracts.workspace = true
build-utils.workspace = true
forsl-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
heck = "0.5"
[lints]
workspace = true
