[package]
name = "slint-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
app-contracts.workspace = true
forsl-core.workspace = true
cfg-if.workspace = true
context.workspace = true
forsl.workspace = true
forsl-macros.workspace = true
i-slint-backend-winit.workspace = true
slint.workspace = true
tracing.workspace = true
widgets.workspace = true
winit.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy.workspace = true
windows = { workspace = true, features = [
    "UI",
    "UI_ViewManagement",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
app-contracts.workspace = true
context.workspace = true
forsl-codegen.workspace = true
forsl-core.workspace = true
slint-build.workspace = true
toml.workspace = true
