[package]
name = "domain-agents"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
app-contracts.workspace = true
forsl-core.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
context.workspace = true
forsl-macros.workspace = true
ogurpchik.workspace = true
rkyv.workspace = true
serde.workspace = true
slint.workspace = true
tokio.workspace = true
tracing.workspace = true
uniproc-protocol.workspace = true
uuid.workspace = true
forsl.workspace = true
amethystate.workspace = true