[package]
name = "domain-environments"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
app-contracts.workspace = true
app-core.workspace = true
macros.workspace = true
slint.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
framework.workspace = true
amethystate.workspace = true
serde.workspace = true