[package]
name = "domain-navigation"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
app-contracts.workspace = true
forsl-core.workspace = true
context.workspace = true
macros.workspace = true
tracing.workspace = true
forsl.workspace = true
amethystate.workspace = true
serde.workspace = true

[features]
test-utils = ["forsl-core/test-utils"]
