[package]
name = "domain-processes"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
app-contracts.workspace = true
app-core.workspace = true
bon.workspace = true
context.workspace = true
dashmap.workspace = true
lazy_static.workspace = true
macros.workspace = true
serde.workspace = true
serde_json.workspace = true
slint.workspace = true
sysinfo.workspace = true
tracing.workspace = true
uniproc-protocol.workspace = true
uuid.workspace = true
widgets.workspace = true
framework.workspace = true
amethystate.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Wdk_System_Threading",
    "Wdk_System_SystemInformation",
    "Win32_System_SystemInformation",
] }
